<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>co.com.angos</groupId>
	<artifactId>aproxy</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>aproxy</name>
	<description>Angos Proxy Inverse</description>

	<properties>
		<build.date>TODAY</build.date>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.performance.fork>true</project.performance.fork>
		<project.performance.meminitial>512m</project.performance.meminitial>
		<project.performance.maxmem>1024m</project.performance.maxmem>
		<project.performance.argLine>-XX:MaxPermSize=1024M</project.performance.argLine>
		<start-class>co.com.angos.aproxy.Application</start-class>
		
		<log4j2-version>2.14.1</log4j2-version>
	</properties>


	<dependencies>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j2-version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j2-version}</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>${artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<fork>${project.performance.fork}</fork>
					<meminitial>${project.performance.meminitial}</meminitial>
					<maxmem>${project.performance.maxmem}</maxmem>
					<argLine>${project.performance.argLine}</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>${start-class}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>